# ChangeLog for dev-qt/qtnetwork
# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-qt/qtnetwork/ChangeLog,v 1.15 2015/04/25 18:24:48 kensington Exp $

*qtnetwork-5.7.1 (29 Dec 2016)

  29 Dec 2016; Andrew John Hughes <gnu_andrew@member.fsf.org>
  +qtnetwork-5.7.1.ebuild, -qtnetwork-5.6.2.ebuild:
  dev-qt/qtnetwork: Update to 5.7.1.

*qtnetwork-5.6.2 (15 Dec 2016)

  15 Dec 2016; Andrew John Hughes <gnu_andrew@member.fsf.org>
  +qtnetwork-5.6.2.ebuild, -qtnetwork-5.6.1.ebuild:
  dev-qt/qtnetwork: Update to 5.6.2.

*qtnetwork-5.6.1 (04 Jul 2016)

  04 Jul 2016; Andrew John Hughes <gnu_andrew@member.fsf.org>
  +qtnetwork-5.6.1.ebuild, -qtnetwork-5.6.0.ebuild:
  dev-qt/qtnetwork: Update to 5.6.1.

*qtnetwork-5.6.0 (01 May 2016)

  01 May 2016; Andrew John Hughes <gnu_andrew@member.fsf.org>
  +files/qtnetwork-5.6-aes256.patch, +qtnetwork-5.6.0.ebuild,
  -files/qtnetwork-5.4-aes256.patch, -files/qtnetwork-5.5-aes256.patch,
  -qtnetwork-5.4.2.ebuild, -qtnetwork-5.5.1.ebuild:
  dev-qt/qtnetwork: Update to 5.6.0.

*qtnetwork-5.5.1 (07 Mar 2016)

  07 Mar 2016; Andrew John Hughes <gnu_andrew@member.fsf.org>
  +files/qtnetwork-5.4-aes256.patch, +files/qtnetwork-5.5-aes256.patch,
  +files/qtnetwork-5.5-socklen_t.patch, +qtnetwork-5.5.1.ebuild,
  -files/qtnetwork-aes256.patch, metadata.xml, qtnetwork-5.4.2.ebuild:
  dev-qt/qtnetwork: Add support for 5.5.1.

*qtnetwork-5.4.2 (04 Jul 2015)

  04 Jul 2015; Andrew John Hughes <gnu_andrew@member.fsf.org>
  +qtnetwork-5.4.2.ebuild, -qtnetwork-5.4.1.ebuild:
  Update to qtnetwork 5.4.2.

  08 Jun 2015; Andrew John Hughes <gnu_andrew@member.fsf.org>
  qtnetwork-5.4.1.ebuild:
  Avoid overridding src_prepare function of qt5-build eclass in qtnetwork
  ebuild.

  25 Apr 2015; Michael Palimaka <kensington@gentoo.org> metadata.xml:
  Add description for bindist USE flag.

  22 Apr 2015; Michael Palimaka <kensington@gentoo.org> qtnetwork-5.4.1.ebuild: