@@ -3,14 +3,15 @@ Hash: SHA256
 
 AUX qtnetwork-5.5-socklen_t.patch 1318 SHA256 d2e258025502bd428f519ffe04dd362cc77c90685aa18038c2395f28a5d8f7ef SHA512 ebb7a8ee9bb51a886982dbac688f296fd93ee5b210895022670ef5e3b9ba22e02899be5755240d3cebe7cd1ed6ec4bf6c85c578fe0ed54e35b6fe9ac0e14dfcd WHIRLPOOL eb06aba3a1ee36380fd26039cfe677f64f9bdc4b1019f44ab5f933b7a5eb1320cfca591131d221d1ed5edbb40e48b7b5da879d3eae8eeaf91de9c6561c0874ca
 AUX qtnetwork-5.6-aes256.patch 7894 SHA256 711234ff7f6e04c644d57674c79dc84185d507730b7b732e1620e2626999d8fc SHA512 71a5075a9a3ee7611e4b55399980f8a4a9b7d7d68a807dc6183fbb57aadf22bb8272b20203ba932b19988c88aa95fa393227444360695a4e8f28167d27fd6933 WHIRLPOOL c5e54f835a21e571e19974469f9ea831b8e5f653d5cc0b896d4ada4100416e473050f4d8a29b83a52bcabbd43081d8e6c3f2d21a54b1ac5bcf99d09c5a06577a
-DIST qtbase-opensource-src-5.7.1.tar.xz 44992616 SHA256 edcdf549d94d98aff08e201dcb3ca25bc3628a37b1309e320d5f556b6b66557e SHA512 0506a3a856f76e5ba182e3382a515282b6096f3900fbdc14cd5aec425105ab61922e0ada0361234387335ceb80b3c69e39cd34d75476c2946c4371e7b8c0827f WHIRLPOOL de5ff1380b3fd9cbcca741d212ac516e3f8a31366219605730cf5525a04e4efc9965a9b3cf8e99f50a2912bc7add83f61e7f90a85e176ad2830e4c1422b5d682
-EBUILD qtnetwork-5.7.1.ebuild 1196 SHA256 1e47354201ae2c6ce311cc3b95bc517f0d4eb4afa2ed62a70c9aa62eff0b022c SHA512 849de159ddd762d14d7e8c835c16561f27897b60d272e0deaf69e83f82f74f41a005a90e2ffd0a0a12d2c20285228fcec3f9990f5291a834fa81fbdf17da915c WHIRLPOOL 4aa0140bcc2ae8d228e5266c6cae1f1bf933e7f40eb0228f47352ed73d2e18605221864fd15079414a4a79e472738563260349e52703b4529ec8e8461b02bb02
-MISC ChangeLog 3340 SHA256 18ddd6001dbf77916418faadc4c5d3912a52729f1c135925f374cd43cb33ac7f SHA512 74cff055fb3bb91822df09e9edc224243ca4a992f4ead8f6ff1c2d8dd83ed67983a1f8ccd2e08a8d1a03e32bfc166105de578def9eecd8e18b0affff6580f369 WHIRLPOOL 4e4ae2dcc431ade08bfd695bca424a8992d32d255373243bc0f6f1d427eaff232d26f26161f979767298bfbc4722bf97dfaa13ac6e50897c3ac3d9138533d2bd
+DIST qtbase-opensource-src-5.9.5.tar.xz 45125492 SHA256 7d3ef666d2efcf260a5a0780a1ccd49f897e839e1d9932225be4859ec26730d4 SHA512 910cbcfed1f2a0590e701cede0a9e8399e1f1363ac4863e2f200b675650e3bd1802113df0dfe4309470d27bf6bc0e53fbbab01024d52fad904db8cb2e038454a WHIRLPOOL 9af05bc30af019df0e215f8ccb431f9e96913b3f2d8a32d8d55dab2e1cace91cfe4bd75b5bc2dbc863302d51fa903573d26d08290dfcd0503840849fb75736c6
+DIST qtnetwork-openssl-1.1.0.patch 62411 SHA256 a3409672b2e178d86f2afe32cf9692fd2ce4bdc92388c69b5f0cd77a20fffa8c SHA512 cfb902f1406cde4641cfcf2102666189265c86e3ff2743e6c7613f9697912503fd6f07060f2f8c3881f9f29e9662bb0f2e5e8cd75fa00f4eee70b057b4e71c8d WHIRLPOOL 71aa62526abf22cc31f75b3f794ad5b879df459c0d9bbda823db36a4cd554fcedb48d38a3b552a8cefb0b2a863b769edbe20aff6354ace96415ae542ce3ea032
+EBUILD qtnetwork-5.9.5.ebuild 1411 SHA256 9f6415c529573bcab755fc3d43da33b44d8d6a1e3d47b54429e8800ebeb90ce2 SHA512 843ccbf8cfe6d79e7e295359933d76082b6ea4d93a2417e389c13f3a7ca018fb9c592f55c08f76dc3f8b9592315a6e8d8ac64d7b80e22f7e82c14719880f21af WHIRLPOOL 6a0a8859e0bc5e896efd5e2a597d3f27af94450193e09a16f8abae60e94a26b298028df4b2e88e22a9e05ae6a296c01e50ab96cc685304dc488c62cb9c61bbdd
+MISC ChangeLog 3550 SHA256 07f0516ab0235017c50e545b17714251ec10d3031dc6b159e1c3d4f0e0ff98cd SHA512 6843c1b38298b7669558ccf7811841df431fb44f01881392415fc9b6dac4face7522dceb325e439ba3c9cf1e0837c9ea514021f61c8ac934c0ff843a5f843bc4 WHIRLPOOL 950b07e54eddbb79aaff1d1f029ced9707e29cc9c87f88452c119cb3eead384b1c312a530b602d218945270fd8f2dbe9de80a8511f7d03531d01119840462e17
 MISC metadata.xml 745 SHA256 3dbd73c4b38b1e4cec816b28c63c25c9a9ea0e91429699240f0f692abc52d323 SHA512 2e0e17cfef3b53b693f53fda928c22967da88d2f1216f386b26487f82776e7f1812fb00123f0215706fddc089ef1e8cd9f4304f1956a82c3f83c8d1ac095f3d6 WHIRLPOOL 36c24fd8ee3f13400c646ff01106d3ab96a48dc600b313b21c1245529a34013a0f640391271c2803170985c746e8fd1fb32068009b6962faeea5920f78f24a9c
 -----BEGIN PGP SIGNATURE-----
 
-iHUEARYIAB0WIQRRMled0VQO0j4ExaDP2g+bNZZCIgUCWGWSEwAKCRDP2g+bNZZC
-InUIAP0RJO4Wu1aUFe/DRm5y77nGFUu1QPp8wlqnST4KWTuKyAEA8Tal6kwVmVZO
-Kmi9x3Xdb7CInEEZ7M+wqq6hUlQCuww=
-=6QGB
+iHUEARYIAB0WIQRRMled0VQO0j4ExaDP2g+bNZZCIgUCWyqKyQAKCRDP2g+bNZZC
+IpaDAPwOIMRhf+anrhUi4J0vzCqL7s5CE2u/xDG5/kByvn+jVAEA94miYeC5RTma
+ZQP2mRZx1RPU3tP3nhyk/LcKhtQEzgM=
+=UHCP
 -----END PGP SIGNATURE-----
